# codemap

./: .gitignore  README.md  codemap.md  pyproject.toml
src/codemap/: cli.py  constants.py  formatter.py  root.py  scanner.py  writer.py
src/codemap/plugins/: base.py  javascript.py  python.py
